# mxalloy

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_flux.py  benchmark_klein.py
docs/: AGENT_WORKFLOW.md  ARCHITECTURE_SPLIT.md  BENCHMARKS.md  DESIGN_BRIEF.md  DISTRIBUTION_READINESS.md  ERRORS.md  EXECUTION_STRATEGY.md  MISO_TTS_PLAN.md  RELEASE_CHECKLIST.md  SCHEDULE.md  UI_PLAN.md  VERSIONING.md
examples/: flux_text_to_image.py  miso_text_to_speech.py
experiments/: bench_vs_mflux.py  feasibility_9b.py  gen_tiled_hires.py  generate_klein.py  perf_ceiling.py  perf_phase2.py  perf_phase2_report.md  precision_microbench.py  profile_details.py  profile_peak.py  profile_step.py  proto_qkv_attention.py  step_count_sweep.py  streaming_quant_load.py  verify_caching.py  verify_loader_vae.py  verify_lora.py  verify_sampling.py  verify_text_encoder.py  verify_tiled_vae.py  verify_tokenizer.py  verify_transformer.py  verify_vae.py
mxalloy/: __init__.py  config.py  errors.py  loader.py
mxalloy/attention/: __init__.py  quantized_sdpa.py  tiled.py
mxalloy/attention/csrc/: CMakeLists.txt  quantized_sdpa.cpp  quantized_sdpa.h  quantized_sdpa.metal  setup.py
mxalloy/integrations/: __init__.py  diffusers.py
mxalloy/kernels/: __init__.py  registry.py
mxalloy/models/: __init__.py  flux.py
mxalloy/models/flux2/: __init__.py  engine.py  latents.py  loader.py  lora.py  scheduler.py  text_encoder.py  tokenizer.py  transformer.py  vae.py  weight_mapping.py
mxalloy/quant/: __init__.py  int8.py
mxalloy/runtime/: __init__.py  device.py  loader.py  planner.py  scheduler.py
mxalloy/utils/: __init__.py  logging.py
mxdiffusers/: PROVENANCE.md  __init__.py  auto.py  hub.py  lora.py  pipeline.py  vae_kl.py
mxdiffusers/flux/: FLUX1_SPEC.md  __init__.py  engine.py  latents.py  loader.py  lora.py  pipeline.py  scheduler.py  text_encoder.py  tokenizer.py  transformer.py  vae.py  weight_mapping.py
mxdiffusers/flux1/: SPEC.md
mxdiffusers/qwen_image/: SPEC.md
mxdiffusers/sd3/: SPEC.md
mxdiffusers/sdxl/: SPEC.md  __init__.py  clip.py  engine.py  lora.py  pipeline.py  scheduler.py  unet.py  vae.py  weight_mapping.py
mxdiffusers/zimage/: SPEC.md  __init__.py  engine.py  lora.py  pipeline.py  transformer.py  vae.py  weight_mapping.py
mxtts/: PROVENANCE.md  __init__.py  audio_io.py  pipeline.py
mxtts/miso/: __init__.py  pipeline.py
research/attention_kernel/: CMakeLists.txt  README.md  bindings.cpp  quantized_sdpa.cpp  quantized_sdpa.h  setup.py
surface/: README.md  __init__.py  engine.py  server.py
surface/static/: app.js  index.html  styles.css
tests/: _mlx.py  test_architecture_boundary.py  test_errors.py  test_hub.py  test_imports.py  test_loader.py  test_mxtts_audio.py  test_planner.py  test_quant.py  test_quantized_sdpa.py  test_sdxl.py  test_vae_tiling.py  test_weight_mapping.py  test_zimage_lora.py  test_zimage_weight_mapping.py
