[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mxalloy"
version = "0.1.0"
description = "Apple Silicon-native AI inference acceleration for MLX and Metal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alloy Contributors" }
]
dependencies = [
  "diffusers>=0.30",
  "huggingface-hub>=0.23",
  "numpy>=1.26",
  "packaging>=24.0",
  "pillow>=10.0",
  "safetensors>=0.4",
  "tqdm>=4.66",
  "transformers>=4.44"
]

[project.optional-dependencies]
mlx = [
  "mlx>=0.15"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.urls]
# Replace with the real repository before publishing.
Homepage = "https://github.com/your-org/alloy"
Repository = "https://github.com/your-org/alloy"

[tool.hatch.build.targets.wheel]
packages = ["mxalloy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
